<resources>
    <string name="app_name">TourGuidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tag1_play_sound_icon">click to pause</string>
    <string name="tag2_play_sound_icon">click to play</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="historical_places">Historical places</string>
    <string name="beaches"> Beaches </string>
    <string name="natural_places"> Natural places </string>
    <string name="museums"> Museums </string>
    <string name="restaurants"> Restaurants</string>
    <string name="islamics"> Islamics </string>
    <string name="copts"> Copts </string>
    <string name="communicate"> Communicate </string>
    <string name="share"> Share </string>
    <string name="invite"> Invite </string>
    <string name="facebook"> Facebook </string>
    <string name="whatsApp"> WhatsApp </string>
    <string name="gmail"> Gmail </string>
    <string name="share_via_facebook">share via facebook</string>
    <string name="share_via_whatsapp">share via whatsapp</string>
    <string name="share_via_gmail">share via gmail</string>
    <string name="invitation_activity">Invite friends</string>
    <string name="text_invitation">Invite your friends</string>
    <string name="country">EGYPT</string>
    <string name="country_address">Eastern-North of Africa </string>
    <string name="country_description">Arab Republic of Egypt is a Mediterranean country bordered by Palestine to
        the northeast, the Gulf of Aqaba to the east, the Red Sea to the east and south, Sudan to the south, and Libya to the west. Across the Gulf of Aqaba lies Jordan, and across from the Sinai Peninsula lies Saudi Arabia, although Jordan and Saudi Arabia do not share a land border with Egypt. know more @[https://en.wikipedia.org/wiki/Egypt]</string>
    <string-array name="museums_names">
        <item>Egyptian Museum</item>
        <item>Museum of Islamic Art</item>
        <item>The Coptic Museum</item>
        <item>The Alexandria National Museum</item>
        <item>Abdeen Palace Museum</item>
        <item>The Agriculture Museum</item>
    </string-array>
    <string-array name="museums_address">
        <item>Cairo</item>
        <item>Cairo</item>
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Cairo</item>
        <item>Cairo</item>
    </string-array>
    <string-array name="museums_descriptions">
        <item>The Museum of Egyptian Antiquities, known commonly as the Egyptian Museum or Museum of Cairo, in Cairo,
            Egypt, is home to an extensive collection of ancient Egyptian antiquities. It has 120,000 items,
            with a representative amount on display, the remainder in storerooms. The edifice is one of the largest museums in the region. As of July 2017,
            the museum is open to the public.more@[https://en.wikipedia.org/wiki/Egyptian_Museum]</item>
        <item>The Museum of Islamic Art, in Cairo, Egypt, is considered one of the greatest in the world, with its exceptional collection of rare woodwork and plaster artefacts, as well as metal, ceramic, glass, crystal, and textile objects of all periods, from all over the Islamic world.

In recent years, the museum has displayed about 4,500 artefacts in 25 Halls ,[1] but it houses more than 100,000 objects, with the remainder in storage. The collection includes rare manuscripts of the Qur\'an, with some calligraphy written in silver ink, on pages with elaborate borders.

The Museum has conducted archaeological excavations in the Fustat area and has organized a number of national and international exhibitions. The museum closed for renovations in 2003, and re-opened 8 years later, in August 2010.[1] The restoration cost nearly US$10 million.[1]more@[https://en.wikipedia.org/wiki/Museum_of_Islamic_Art,_Cairo]</item>
        <item> The Coptic Museum in Cairo has been closed for some time for remodeling, but we are now celebrating its recent reopening, a welcome addition to Old Coptic Cairo. It is located in the heart of Coptic Cairo.



Christianity has a long history in Egypt, and there continues to be a significant population of Christians in Egypt today. Besides the truly Egyptian heritage of Coptic Christians, there are also Roman Catholics, as well as a number of Protestant sects. Christianity spread in Egypt during the 2nd century in Egypt, just after and indeed during the Roman pagan period, and it became the dominant religion in Egypt up until the Arab invasion in 641 AD.more@[http://www.touregypt.net/featurestories/copticmuseum1.htm]</item>
        <item> Notation: Zahraa Adel Awed is a licensed Travel Guide living in Alexandria who frequently assists people who visit our Forum system, and who operates our Alexandria News Blog



As the principal anchorage of the Hellenic Empire, the Ptolemaic capital and Egypt\'s second largest metropolis, the Mediterranean port of Alexandria has always been a center of cultural significance. Celebration of this has been a big part of Alexandria\'s recent development, and these days there is the Alexandria National Museum, a splendid facility that documents Alex\'s rich heritage.more@[http://www.touregypt.net/featurestories/alexandrianationalmuseum.htm]</item>
        <item> Abdeen Palace was built in 1863 on a 25-feddan area by Egyptian, Italian, French and Turkish architects. In 1872 the lush and luxurious palace became the seat of the government.



Believing in the fact that such palace is part and parcel of Egypts heritage, President Mubarak in the late eighties ordered that the palace, one of the most beautiful in the world, be completely restored. Restoration work took longer than expected as the old palace was hit during the strong 1992 earthquake that jolted Egypt.



Abdeen Palace is one of the most famous palaces that were erected during the reign of Mohamed Ali Pasha Dynasty. It was the seat of the government as of 1872 till 1952. During such eventful period of time, Abdeen Palace witnessed unforgettable events that undoubtedly affected Egypts modern and contemporary history.



Khedive Ismail ordered the palace be erected in 1863, and the palace was named after Abdeen Bay, one of the army commander under Mohamed Ali Basha. In 1872, Khedive Ismail moved to Abdeen Palace, leaving the castle, old seat of Egypts government, that was built by Saladdin Al Ayoubi in 1171. And today the Abdeen Palace Museum complex stands as an evidence to Egypt\'s active role over times.



The complex features a military museum of all arms presented as gifts to President Mubarak on different occasions, a museum of ancient weapons and a third of the medals and orders of merit bestowed on members of Egypts formal royal family and eminent Egyptian figures.[http://www.touregypt.net/abdeenpalace.htm]</item>
        <item>Agriculture has played a major role in the Egyptian history and always affected the lives of Egyptians from the days of the pharaohs up to our modern time. There is much truth in the famous saying: Egypt is the gift of the Nile. This is because the Nile is the major source of water used in agriculture in Egypt. Therefore, because of agriculture\'s ancient and continuing importance to Egyptian life, during the 1930s the Egyptian government decided to build an agriculture museum. The museum was built during the period of King Farouk to mainly serve two purposes. These are to provide information agricultural and economic knowledge and to record the history of agriculture over a long period that extends form prehistoric to modern times.

The palace of Princess Fatma, daughter of Khedive Ismail, was chosen to house the museum in November, 1930. The Ministry of Agriculture made a lot of changes in the palace to make it suitable as a museum. The museum was first opened on 16 January 1938 and was the first museum of this kind in the world.more@[http://www.touregypt.net/featurestories/agriculturalmuseum.htm]</item>
    </string-array>
    <string-array name="restaurants_names">
        <item>Sequoia in Zamalek – Cairo</item>
        <item>Taboula Garden city </item>
    </string-array>
    <string-array name="restaurants_address">
        <item>Cairo</item>
        <item>Cairo</item>
    </string-array>
    <string-array name="restaurants_descriptions">
        <item>Whatever what your preferences are, Sequoia is undoubtedly one of Egypt’s hottest spots, given it’s unique location on the Nile - it’s setting that changes all the time offering a truly unique experience on the River Nile’s banks.[http://www.travelstart.com.eg/blog/the-65-best-destinations-in-all-egypt/]</item>
        <item>Although Taboula now has several branches, Garden city remains the best. A Lebanese restaurant with a typically Egyptian atmosphere. Their mezza menu is enough to please all taste buds, their main dishes are not-to-be-missed as well.[http://www.travelstart.com.eg/blog/the-65-best-destinations-in-all-egypt/]</item>
    </string-array>
    <string-array name="copts_names">
        <item>Coptic Cairo</item>
        <item>Monastery of St. Simeon</item>
        <item>The Hanging Church</item>
        <item>The Coptic Cemetery</item>
    </string-array>
    <string-array name="copts_address">
        <item> Sharia Mar Girgis, south of Downtown</item>
        <item> West Bank</item>
        <item> Cairo</item>
        <item> Cairo</item>
    </string-array>
</resources>